tests/ui/compile-fail-const-assert.rs
fn main() {
    const { assert!(false) };
}
